# learning_fast_api

./: .gitignore  README.md  alembic.ini  create_migration.py  migrate.py  pyproject.toml  test_main.http
alembic/: env.py
alembic/versions/: 001_initial_migration.py
app/: __init__.py  main.py
app/api/: __init__.py
app/api/auth/: __init__.py  routes.py  schemas.py  service.py
app/api/routes/: hello.py  users.py
app/api/users/: __init__.py  models.py  routes.py  schemas.py  service.py
app/core/: __init__.py  config.py  database.py  exception_handlers.py  logging_config.py  middleware.py  redis_queue.py  security.py
app/models/: __init__.py  user.py
app/schemas/: hello.py  user.py
app/services/: __init__.py  auth_service.py  user_service.py
docker/: .dockerignore  DOCKER_GUIDE.md  Dockerfile  docker-compose.yml
docs/: ALEMBIC_GUIDE.md  CODE_FORMATTING.md  FEATURES_APPLIED.md
scripts/: setup.sh
