[project]
name = "learning"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.5",
    "uvicorn>=0.40.0",
    "pydantic-settings>=2.0.0",
    "sqlmodel>=0.0.32",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.0",
    "rq>=1.15.0",
    "python-dotenv>=1.0.0",
    "email-validator>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.6",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["docker*", "scripts*"]

