[project]
name = "learning"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.5",
    "uvicorn>=0.40.0",
    "pydantic-settings>=2.0.0",
    "sqlmodel>=0.0.32",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.0",
    "rq>=1.15.0",
    "python-dotenv>=1.0.0",
    "email-validator>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    "python-multipart>=0.0.6",
    "passlib[bcrypt]>=1.7.4",
    "ruff>=0.8.0",
    "mypy>=1.8.0",
]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["docker*", "scripts*"]

# Ruff 설정
[tool.ruff]
line-length = 88
target-version = "py313"

# 제외할 디렉토리
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "migrations",
    "__pycache__",
]

# Ruff 린트 설정
[tool.ruff.lint]
# 활성화할 규칙: pycodestyle (E, W), Pyflakes (F), isort (I), pyupgrade (UP)
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",  # line-too-long (formatter가 처리)
]

# Ruff 포매터 설정
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# mypy 설정
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
